# learn_opengl

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: cube.frag  cube.vert  light.frag  light.vert  triangles.frag  triangles.vert
src/: glm_test.cpp  hello_window.cpp  lighting.cpp
